# go-bls

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bls.c  bls.go  bls_test.go  crypto.go  ignore_this_file.go  mcl.go
example/: main.go
example/aggregate-verify/: BUILD.bazel  main.go
example/hash-map-to-g2/: BUILD.bazel  main.go
example/parallelize-verification/: BUILD.bazel  main.go
example/single-sign-verify/: BUILD.bazel  main.go
include/mcl/: bls.h
mcl/: .gitignore  Makefile
mcl/include/mcl/: bls.h  bls.hpp  bn.h  op.hpp
mcl/src/: bls_c256.cpp  bls_c_impl.hpp  bn_c384.cpp  she_c_impl.hpp
mcl/test/: bls256_test.cpp  bls384_test.cpp  bls_c256_test.cpp  bls_c384_256_test.cpp  bls_c384_test.cpp  bls_c_test.hpp  bls_test.hpp
