load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bls.go",
        "crypto.go",
    ],
    cdeps = [
      "go-lib",
    ],
    cgo = True,
    clinkopts = ["-lstdc++"],
    copts = ["-DMCLBN_FP_UNIT_SIZE=6 -DMCL_DONT_USE_OPENSSL"],
    importpath = "github.com/prysmaticlabs/go-bls",
    visibility = ["//visibility:public"],
    x_defs = { "bazel": "true" },
)

cc_library(
    name = "go-lib",
    hdrs = [
        "@herumi_mcl//:include/mcl/bls.h",
        "@herumi_mcl//:include/mcl/bn.h",
        "@herumi_mcl//:include/mcl/curve_type.h",
    ],
    includes = ["external/herumi_mcl/include/"],
    deps = [
        "@herumi_mcl//:mcl-lib",
        "@bazelify_gmp//:gmp",
        "@boringssl//:crypto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bls_test.go"],
    embed = [":go_default_library"],
)
