load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prysmaticlabs/go-bls
gazelle(name = "gazelle")

# gazelle:exclude bls.c

go_library(
    name = "go_default_library",
    srcs = [
        "bls.go",
        "crypto.go",
    ],
    cdeps = [
        "go-lib",
    ],
    cgo = True,
    clinkopts = ["-lstdc++"],  # keep
    copts = ["-DMCLBN_FP_UNIT_SIZE=6 -DMCL_DONT_USE_OPENSSL"],  # keep
    importpath = "github.com/prysmaticlabs/go-bls",
    visibility = ["//visibility:public"],
    x_defs = {"bazel": "true"},
)

cc_library(
    name = "go-lib",
    hdrs = [
        "@herumi_mcl//:include/mcl/bls.h",
        "@herumi_mcl//:include/mcl/bn.h",
        "@herumi_mcl//:include/mcl/curve_type.h",
    ],
    includes = ["external/herumi_mcl/include/"],
    deps = [
        "@herumi_mcl//:mcl-lib",
        "@bazelify_gmp//:gmp",
        "@boringssl//:crypto",
    ],
    linkstatic = True,
    features = ["fully_static_link"],
)

go_test(
    name = "go_default_test",
    srcs = ["bls_test.go"],
    embed = [":go_default_library"],
)
