load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/go-bls/example/hash-map-to-g2",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "hash-map-to-g2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
